Issue #14909: A number of places were using PyMem_Realloc() apis and PyObject_GC_Resize() with incorrect error handling.  In case of errors, the original object would be leaked.  This checkin fixes those cases.